# fprime-zephyr-led-blinker

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  FRAMING_SETUP.md  GENERIC_HUB_FIX_DOCUMENTATION.md  GENERIC_HUB_UART_IMPLEMENTATION.md  PACKET_FORMAT_ANALYSIS.md  README.md  RPI_HUB_MODIFICATIONS.md  STM32_GENERICHUB_IMPLEMENTATION.md  WINDOWS_GDS_GUIDE.md  nohup.out  prj.conf  project.cmake  settings.ini  west.yml  west.yml.backup
Components/: CMakeLists.txt
Components/CmdSequenceForwarder/: CMakeLists.txt  CmdSequenceForwarder.cpp  CmdSequenceForwarder.fpp  CmdSequenceForwarder.hpp
Components/Led/: Led.fpp
Components/Stm32Led/: CMakeLists.txt  Stm32Led.cpp  Stm32Led.fpp  Stm32Led.hpp
Components/UartBufferAdapter/: UartBufferAdapter.cpp
LedBlinker/: CMakeLists.txt  Main.cpp  README.md
LedBlinker/Top/: CMakeLists.txt  LedBlinkerPackets.xml  LedBlinkerTopology.cpp  LedBlinkerTopology.hpp  LedBlinkerTopologyDefs.hpp  instances.fpp  topology.fpp
LedBlinker/config/: CMakeLists.txt  PlatformCfg.fpp
Stm32LedBlinker/: CMakeLists.txt  Main.cpp  README.md  STM32_HUB_PATTERN_FIXES.md  Stub.cpp
Stm32LedBlinker/Components/: CMakeLists.txt  UartBufferAdapter.cpp
Stm32LedBlinker/Components/UartBufferAdapter/: UartBufferAdapter.cpp  UartBufferAdapter.fpp  UartBufferAdapter.hpp
Stm32LedBlinker/NullTextLogger/: CMakeLists.txt  NullTextLogger.cpp  NullTextLogger.fpp  NullTextLogger.hpp
Stm32LedBlinker/Top/: CMakeLists.txt  Stm32LedBlinkerPackets.xml  Stm32LedBlinkerTopology.cpp  Stm32LedBlinkerTopology.hpp  Stm32LedBlinkerTopologyDefs.hpp  instances.fpp  topology.fpp
Stm32LedBlinker/ZephyrUartDriverFixed/: ZephyrUartDriverFixed.fpp
Stm32LedBlinker/config/: CMakeLists.txt  CdhCoreConfig.fpp  ComCcsdsConfig.fpp  GenericHubCfg.fpp  PlatformCfg.fpp
boards/: b_u585i_iot02a.overlay  nucleo_h7a3zi_q.overlay  teensy41.overlay
config/: AcConstants.fpp  CMakeLists.txt  CommandDispatcherImplCfg.hpp  FpConfig.h  PlatformCfg.fpp  TlmChanImplCfg.hpp  config.cpp
stm32_uart_monitor/: main.c
